# HabitForge

./: Dockerfile  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js
backend/: CMakeLists.txt
backend/src/: main.cpp  models.h  store.h
src/: App.tsx  firebase.ts  index.css
src/components/: ProgressRing.tsx  ThemeToggle.tsx
src/context/: AppContext.tsx  ThemeContext.tsx
src/pages/: AdminPanel.tsx  AuthPage.tsx  DashboardLayout.tsx  LandingPage.tsx
src/pages/Dashboard/: Academics.tsx  Analytics.tsx  CalendarView.tsx  Goals.tsx  Habits.tsx  Health.tsx  Profile.tsx
